# livraria

./: .gitignore  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria1/: admin.py  apps.py  models.py  serializers.py  views.py
livraria1/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py
